--- a/backend/package.json
+++ b/backend/package.json
@@ -5,9 +5,11 @@
 	"main": "dist/index.js",
 	"scripts": {
 		"build": "npx tsc",
-		"start": "forever start dist/index.js",
+		"start": "node dist/index.js",
 		"dev": "node --watch -r ts-node/register src/index.ts",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start:prod": "node dist/index",
+		"start:migrate:prod": "npx prisma db push && yarn run start:prod"
 	},
 	"author": "Peter Vel",
 	"license": "ISC",
