--- a/backend/package.json
+++ b/backend/package.json
@@ -7,9 +7,7 @@
 		"build": "npx tsc",
 		"start": "node dist/index.js",
 		"dev": "node --watch -r ts-node/register src/index.ts",
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"start:prod": "node dist/index",
-		"start:migrate:prod": "npx prisma db push && yarn run start:prod"
+		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"author": "Peter Vel",
 	"license": "ISC",
