--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,11 +1,10 @@
-FROM node:20-alpine AS builder
+FROM node:20-alpine
 
 # Create app directory
 WORKDIR /app
 
 # A wildcard is used to ensure both package.json AND package-lock.json are copied
-COPY package*.json ./
-COPY yarn.lock ./
+COPY package*.json yarn.lock ./
 COPY prisma ./prisma/
 
 # Install app dependencies
@@ -16,14 +15,6 @@ COPY . .
 RUN yarn build
 RUN npx prisma generate
 
-FROM node:20-alpine
-
-COPY --from=builder /app/node_modules ./node_modules
-COPY --from=builder /app/package*.json ./
-COPY --from=builder /app/yarn.lock ./
-COPY --from=builder /app/dist ./dist
-COPY --from=builder /app/prisma ./prisma
-
 COPY entrypoint.sh /usr/local/bin/entrypoint.sh
 
 EXPOSE 3000
@@ -31,5 +22,5 @@ EXPOSE 3000
 RUN chmod +x /usr/local/bin/entrypoint.sh
 
 ENTRYPOINT [ "/usr/local/bin/entrypoint.sh" ]
-# 👇 new migrate and start app script
+
 CMD [  "yarn", "start" ]
