--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,11 @@
 services:
-  backend:
-    build: ./backend
-    volumes:
-      - ./.env:/app/.env
-    env_file: ./.env
-    ports:
-      - 3000:3000
-    depends_on:
-      db:
-        condition: service_healthy
-
   db:
     image: mysql:latest
-    env_file: ./.env
     environment:
-      - MYSQL_ROOT_PASSWORD=${DATABASE_PASSWORD}
+      MYSQL_ROOT_PASSWORD: ${DATABASE_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${DATABASE_NAME}
+      MYSQL_USER: ${DATABASE_USER}
+      MYSQL_PASSWORD: ${DATABASE_PASSWORD}
     volumes: 
       - ./data:/var/lib/mysql
     healthcheck:
@@ -22,3 +13,35 @@ services:
       interval: 10s
       timeout: 5s
       retries: 3
+    networks:
+      - internal
+
+  backend:
+    build: ./backend
+    environment:
+      DATABASE_URL: mysql://${DATABASE_USER}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}
+    ports:
+      - "3000:3000"
+    expose:
+      - 3000
+    depends_on:
+      db:
+        condition: service_healthy
+    networks:
+      - internal
+
+  frontend:
+    build: ./frontend
+    environment:
+      VITE_API_BASE_URL: http://backend:3000
+    depends_on:
+      - backend
+    ports:
+      - "5173:5173"
+    networks:
+      - internal
+      - default
+
+networks:
+  internal:
+    driver: bridge
