--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       retries: 3
     networks:
       - internal
+    restart: unless-stopped
 
   backend:
     build: ./backend
@@ -25,20 +26,28 @@ services:
     depends_on:
       db:
         condition: service_healthy
+    healthcheck:
+      test: ["CMD", "wget", "--spider", "http://localhost:3000/health"]
+      interval: 5s
+      timeout: 30s
+      retries: 5
     networks:
       - internal
+    restart: unless-stopped
 
   frontend:
     build: ./frontend
     environment:
       VITE_API_BASE_URL: http://backend:3000
     depends_on:
-      - backend
+      backend:
+        condition: service_healthy
     ports:
-      - "80:5173"
+      - "80:80"
     networks:
       - internal
       - default
+    restart: unless-stopped
 
 networks:
   internal:
