--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,8 @@ services:
       DATABASE_URL: mysql://${DATABASE_USER}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}
     expose:
       - "3000"
+    # ports: # temp for dev
+    #   - "3000:3000"
     depends_on:
       db:
         condition: service_healthy
@@ -33,6 +35,7 @@ services:
       retries: 5
     networks:
       - internal
+      # - default
     restart: unless-stopped
 
   frontend:
@@ -43,7 +46,7 @@ services:
       backend:
         condition: service_healthy
     ports:
-      - "80:80"
+      - "${PUBLIC_PORT}:80"
     networks:
       - internal
       - default
