--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
 		"html-entities": "^2.5.2",
 		"latinize": "1",
 		"mysql2": "^3.9.4",
+		"node-cron": "^3.0.3",
 		"prettier": "^3.3.3",
 		"prisma": "^5.16.1"
 	},
@@ -27,6 +28,7 @@
 		"@types/express": "^4.17.21",
 		"@types/latinize": "^0.2.18",
 		"@types/node": "^20.12.7",
+		"@types/node-cron": "^3.0.11",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.4.5"
 	}
