--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"@prisma/client": "5.16.1",
 		"axios": "^1.6.8",
+		"cookie-parser": "^1.4.6",
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
 		"fast-xml-parser": "^4.3.6",
@@ -25,6 +26,7 @@
 		"prisma": "^5.16.1"
 	},
 	"devDependencies": {
+		"@types/cookie-parser": "^1.4.7",
 		"@types/express": "^4.17.21",
 		"@types/latinize": "^0.2.18",
 		"@types/node": "^20.12.7",
