--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,8 +21,12 @@ services:
     build: ./backend
     environment:
       DATABASE_URL: mysql://${DATABASE_USER}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}
+      ADMIN_PASSWORD: ${SITE_ADMIN_PASSWORD}
+      ENVIRONMENT_MODE: ${ENVIRONMENT_MODE}
     expose:
       - "3000"
+    ports: # temp for dev
+      - "3000:3000"
     depends_on:
       db:
         condition: service_healthy
@@ -33,6 +37,7 @@ services:
       retries: 5
     networks:
       - internal
+      - default # temp for dev
     restart: unless-stopped
 
   frontend:
