--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,8 @@ services:
     build: ./frontend
     environment:
       VITE_API_BASE_URL: http://backend:3000
+      VITE_AUTH0_DOMAIN: ${AUTH0_DOMAIN}
+      VITE_AUTH0_CLIENT_ID: ${AUTH0_CLIENT_ID}
     depends_on:
       backend:
         condition: service_healthy
