Think I finally got this login working

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,7 @@ services:
       VITE_API_BASE_URL: http://backend:3000
       VITE_AUTH0_DOMAIN: ${AUTH0_DOMAIN}
       VITE_AUTH0_CLIENT_ID: ${AUTH0_CLIENT_ID}
+      VITE_AUTH0_AUDIENCE: ${AUTH0_AUDIENCE}
     depends_on:
       backend:
         condition: service_healthy
