--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,7 +43,7 @@ services:
   frontend:
     build: ./frontend
     environment:
-      VITE_API_BASE_URL: http://backend:3000
+      VITE_API_BASE_URL: http://backend:3000/api
       VITE_AUTH0_DOMAIN: ${AUTH0_DOMAIN}
       VITE_AUTH0_CLIENT_ID: ${AUTH0_CLIENT_ID}
       VITE_AUTH0_AUDIENCE: ${AUTH0_AUDIENCE}
