--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,7 @@
 	"author": "Peter Vel",
 	"license": "ISC",
 	"dependencies": {
-		"@prisma/client": "5.16.1",
+		"@prisma/client": "^5.16.1",
 		"axios": "^1.6.8",
 		"cookie-parser": "^1.4.6",
 		"dotenv": "^16.4.5",
