--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,11 +37,13 @@ services:
       retries: 5
     networks:
       - internal
-      - default # temp for dev
+      - default
     restart: unless-stopped
 
   frontend:
-    build: ./frontend
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile.prod
     environment:
       VITE_API_BASE_URL: http://backend:3000/api
       VITE_AUTH0_DOMAIN: ${AUTH0_DOMAIN}
@@ -50,11 +52,25 @@ services:
     depends_on:
       backend:
         condition: service_healthy
-    ports:
-      - "${PUBLIC_PORT}:80"
+    expose:
+      - "80"
     networks:
       - internal
       - default
+    restart: unless-stopped
+
+  nginx:
+    image: nginx:alpine
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx/nginx.prod.conf:/etc/nginx/nginx.conf
+    networks:
+      - internal
+      - default
+    depends_on:
+      - frontend
+      - backend
     restart: unless-stopped
 
 networks:
