--- a/nginx/nginx.dev.conf
+++ b/nginx/nginx.dev.conf
@@ -13,17 +13,20 @@ http {
     listen 80;
     server_name localhost;
 
-    root /usr/share/nginx/html;
-    index index.html;
-
-    # Serve static files
+    # Proxy requests to Vite dev server
     location / {
-      try_files $uri $uri/ /index.html;
+      proxy_pass http://frontend:5173; # Vite development server
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
     }
 
     # Proxy API requests
     location /api {
-      proxy_pass http://backend:3000; # Ensure this is correct
+      proxy_pass http://backend:3000/api; # Ensure this is correct
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
