--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
 		"express": "^4.19.2",
 		"fast-xml-parser": "^4.3.6",
 		"html-entities": "^2.5.2",
+		"ioredis": "^5.4.1",
 		"latinize": "1",
 		"mysql2": "^3.9.4",
 		"node-cron": "^3.0.3",
