--- a/nginx/nginx.prod.conf
+++ b/nginx/nginx.prod.conf
@@ -15,6 +15,7 @@ http {
 
     # Handle frontend requests
     location / {
+      try_files $uri $uri/ /index.html;
       proxy_pass http://frontend:80;  # Proxy to the frontend service
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
