--- a/nginx/nginx.prod.conf
+++ b/nginx/nginx.prod.conf
@@ -15,7 +15,6 @@ http {
 
     # Handle frontend requests
     location / {
-      try_files $uri $uri/ /index.html;
       proxy_pass http://frontend:80;  # Proxy to the frontend service
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
@@ -25,7 +24,7 @@ http {
 
     # Proxy API requests
     location /api {
-      proxy_pass http://backend:3000; # Ensure this is correct
+      proxy_pass http://backend:3000/api; # Ensure this is correct
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
