--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,6 +53,8 @@ services:
       VITE_AUTH0_DOMAIN: ${AUTH0_DOMAIN}
       VITE_AUTH0_CLIENT_ID: ${AUTH0_CLIENT_ID}
       VITE_AUTH0_AUDIENCE: ${AUTH0_AUDIENCE}
+    volumes:
+      - frontend-build:/usr/share/nginx/html  # Share the build output with the Nginx container
     depends_on:
       backend:
         condition: service_healthy
@@ -68,6 +70,7 @@ services:
     ports:
       - "8080:80"
     volumes:
+      - frontend-build:/usr/share/nginx/html  # Mount the shared volume
       - ./nginx/nginx.prod.conf:/etc/nginx/nginx.conf
     networks:
       - internal
