Fixed routing in production

--- a/nginx/nginx.prod.conf
+++ b/nginx/nginx.prod.conf
@@ -15,6 +15,8 @@ http {
 
     # Handle frontend requests
     location / {
+      root /usr/share/nginx/html;  # Serve files from the build directory
+      try_files $uri $uri/ /index.html;  # Fallback to index.html for client-side routing
       proxy_pass http://frontend:80;  # Proxy to the frontend service
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
