--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@fontsource/roboto": "^5.0.14",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
+    "axios": "^1.7.7",
     "classnames": "^2.5.1",
     "html-react-parser": "^5.1.13",
     "react": "^18.3.1",
