--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
     "@mui/material": "^5.16.7",
     "axios": "^1.7.7",
     "classnames": "^2.5.1",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "html-react-parser": "^5.1.13",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
