--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
+    "@types/file-saver": "^2.0.7",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
