Updates and fixes

--- a/.env-example
+++ b/.env-example
@@ -7,6 +7,9 @@ DATABASE_HOST=
 DATABASE_PORT=
 DATABASE_NAME=
 
+# xml fetcher
+DEFAULT_GEEKLIST_ID=
+
 # backend
 DATABASE_URL=
 SITE_ADMIN_PASSWORD=
