--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
       REDIS_HOST: redis
       REDIS_PORT: 6379
       PAGE_SIZE: ${PAGE_SIZE}
+      DEFAULT_GEEKLIST_ID: ${DEFAULT_GEEKLIST_ID}
     expose:
       - "3000"
     ports: # temp for dev
@@ -56,6 +57,7 @@ services:
       VITE_AUTH0_DOMAIN: ${AUTH0_DOMAIN}
       VITE_AUTH0_CLIENT_ID: ${AUTH0_CLIENT_ID}
       VITE_AUTH0_AUDIENCE: ${AUTH0_AUDIENCE}
+      VITE_DEFAULT_GEEKLIST_ID: ${DEFAULT_GEEKLIST_ID}
     volumes:
       - frontend-build:/usr/share/nginx/html  # Share the build output with the Nginx container
     depends_on:
@@ -90,6 +92,8 @@ services:
     networks:
       - internal
     restart: unless-stopped
+    environment:
+      - DEFAULT_GEEKLIST_ID=${DEFAULT_GEEKLIST_ID}
 
   redis:
     image: redis:latest
