--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,6 +58,7 @@ services:
       VITE_AUTH0_CLIENT_ID: ${AUTH0_CLIENT_ID}
       VITE_AUTH0_AUDIENCE: ${AUTH0_AUDIENCE}
       VITE_DEFAULT_GEEKLIST_ID: ${DEFAULT_GEEKLIST_ID}
+      VITE_GOOGLE_CLIENT_ID: ${GOOGLE_CLIENT_ID}
     volumes:
       - frontend-build:/usr/share/nginx/html  # Share the build output with the Nginx container
     depends_on:
