--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,12 +15,14 @@
     "@fontsource/roboto": "^5.2.5",
     "@mui/icons-material": "^6.4.6",
     "@mui/material": "^6.4.6",
+    "@react-oauth/google": "^0.12.1",
     "@types/file-saver": "^2.0.7",
     "axios": "^1.8.1",
     "classnames": "^2.5.1",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "html-react-parser": "^5.2.2",
+    "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
