--- a/.env-example
+++ b/.env-example
@@ -12,6 +12,8 @@ DEFAULT_GEEKLIST_ID=
 
 # backend
 DATABASE_URL=
+SHADOW_DATABASE_URL=
+
 SITE_ADMIN_PASSWORD=
 ENVIRONMENT_MODE=
 JWT_SHARED_SECRET=
