--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,8 @@ services:
       - internal
       - default
     restart: unless-stopped
+    command: >
+      sh -c "npx prisma migrate deploy && npm start"
 
   frontend:
     build:
