--- a/backend/package.json
+++ b/backend/package.json
@@ -13,13 +13,16 @@
 	"license": "ISC",
 	"dependencies": {
 		"@prisma/client": "^6.4.1",
+		"@types/jsonwebtoken": "^9.0.9",
 		"axios": "^1.6.8",
 		"cookie-parser": "^1.4.6",
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
 		"fast-xml-parser": "^5.0.8",
+		"google-auth-library": "^9.15.1",
 		"html-entities": "^2.5.2",
 		"ioredis": "^5.4.1",
+		"jsonwebtoken": "^9.0.2",
 		"latinize": "2.0.0",
 		"mysql2": "^3.9.4",
 		"node-cron": "^3.0.3",
