--- a/backend/package.json
+++ b/backend/package.json
@@ -2,10 +2,10 @@
 	"name": "spiel-auction-backend",
 	"version": "1.0.0",
 	"description": "The backend for the BGG auctions tool",
-	"main": "dist/index.js",
+	"main": "dist/src/index.js",
 	"scripts": {
 		"build": "npx tsc",
-		"start": "node dist/index.js",
+		"start": "node dist/src/index.js",
 		"dev": "node --watch -r ts-node/register src/index.ts",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
