--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,6 +59,8 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile.prod
+      args:
+        VITE_DEFAULT_GEEKLIST_ID: ${DEFAULT_GEEKLIST_ID}
     environment:
       VITE_API_BASE_URL: http://backend:3000/api
       VITE_AUTH0_DOMAIN: ${AUTH0_DOMAIN}
