Added google client id env handling

--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -9,6 +9,7 @@ COPY package.json yarn.lock ./
 
 # Use the env variables during build
 ARG VITE_DEFAULT_GEEKLIST_ID
+ARG VITE_GOOGLE_CLIENT_ID
 
 # Install dependencies using Yarn
 RUN yarn install
@@ -17,7 +18,9 @@ RUN yarn install
 COPY . .
 
 # Build with the env var passed explicitly
-RUN VITE_DEFAULT_GEEKLIST_ID=$VITE_DEFAULT_GEEKLIST_ID yarn build
+RUN VITE_DEFAULT_GEEKLIST_ID=$VITE_DEFAULT_GEEKLIST_ID \
+    VITE_GOOGLE_CLIENT_ID=VITE_GOOGLE_CLIENT_ID \
+    yarn build
 
 # Stage 2: Serve the application with Nginx
 FROM nginx:alpine
