--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,6 +61,7 @@ services:
       dockerfile: Dockerfile.prod
       args:
         VITE_DEFAULT_GEEKLIST_ID: ${DEFAULT_GEEKLIST_ID}
+        VITE_GOOGLE_CLIENT_ID: ${GOOGLE_CLIENT_ID}
     environment:
       VITE_API_BASE_URL: http://backend:3000/api
       VITE_AUTH0_DOMAIN: ${AUTH0_DOMAIN}
