--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,6 +60,10 @@ services:
       context: ./frontend
       dockerfile: Dockerfile.prod
       args:
+        VITE_API_BASE_URL: http://backend:3000/api
+        VITE_AUTH0_DOMAIN: ${AUTH0_DOMAIN}
+        VITE_AUTH0_CLIENT_ID: ${AUTH0_CLIENT_ID}
+        VITE_AUTH0_AUDIENCE: ${AUTH0_AUDIENCE}
         VITE_DEFAULT_GEEKLIST_ID: ${DEFAULT_GEEKLIST_ID}
         VITE_GOOGLE_CLIENT_ID: ${GOOGLE_CLIENT_ID}
     environment:
