--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -19,7 +19,11 @@ COPY . .
 
 # Build with the env var passed explicitly
 RUN VITE_DEFAULT_GEEKLIST_ID=$VITE_DEFAULT_GEEKLIST_ID \
-    VITE_GOOGLE_CLIENT_ID=VITE_GOOGLE_CLIENT_ID \
+    VITE_GOOGLE_CLIENT_ID=$VITE_GOOGLE_CLIENT_ID \
+    VITE_API_BASE_URL=$VITE_API_BASE_URL \
+    VITE_AUTH0_DOMAIN=$VITE_AUTH0_DOMAIN \
+    VITE_AUTH0_CLIENT_ID=$VITE_AUTH0_CLIENT_ID \
+    VITE_AUTH0_AUDIENCE=$VITE_AUTH0_AUDIENCE \
     yarn build
 
 # Stage 2: Serve the application with Nginx
