--- a/nginx/nginx.prod.conf
+++ b/nginx/nginx.prod.conf
@@ -9,28 +9,44 @@ http {
   sendfile on;
   keepalive_timeout 65;
 
+
   server {
-    listen 80;
+    listen 443 ssl;
+    listen [::]:443 ssl;
+
     server_name petervel.nl;
 
-    # Handle frontend requests
+    ssl_certificate /etc/letsencrypt/live/petervel.nl/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/petervel.nl/privkey.pem;
+
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+
     location / {
-      root /usr/share/nginx/html;  # Serve files from the build directory
-      try_files $uri $uri/ /index.html;  # Fallback to index.html for client-side routing
-      proxy_pass http://frontend:80;  # Proxy to the frontend service
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
+        root /usr/share/nginx/html;
+	index index.html;
+        try_files $uri /index.html;
     }
 
-    # Proxy API requests
     location /api {
-      proxy_pass http://backend:3000/api; # Ensure this is correct
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_pass http://backend:3000/api;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+  }
+
+  server {
+    listen 80;
+    listen [::]:80; # IPv6
+    server_name petervel.nl;
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    location / {
+        return 301 https://$host$request_uri;
     }
   }
 }
