Fixed google login

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,9 @@ services:
       DEFAULT_GEEKLIST_ID: ${DEFAULT_GEEKLIST_ID}
       JWT_SHARED_SECRET: ${JWT_SHARED_SECRET}
       JWT_REFRESH_SECRET: ${JWT_REFRESH_SECRET}
+      GOOGLE_CLIENT_ID: ${GOOGLE_CLIENT_ID}
+      GOOGLE_CLIENT_SECRET: ${GOOGLE_CLIENT_SECRET}
+      GOOGLE_REDIRECT_URI: ${GOOGLE_REDIRECT_URI}
     expose:
       - "3000"
     ports: # temp for dev
