--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -21,6 +21,6 @@ EXPOSE 3000
 
 RUN chmod +x /usr/local/bin/entrypoint.sh
 
-ENTRYPOINT [ "/usr/local/bin/entrypoint.sh" ]
+#ENTRYPOINT [ "/usr/local/bin/entrypoint.sh" ]
 
 CMD [  "yarn", "start" ]
