I think it all works.. Stars and all

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -13,7 +13,7 @@ RUN yarn install
 COPY . .
 
 RUN yarn build
-RUN npx prisma generate
+# RUN npx prisma generate
 
 COPY entrypoint.sh /usr/local/bin/entrypoint.sh
 
@@ -21,6 +21,6 @@ EXPOSE 3000
 
 RUN chmod +x /usr/local/bin/entrypoint.sh
 
-#ENTRYPOINT [ "/usr/local/bin/entrypoint.sh" ]
+# ENTRYPOINT [ "/usr/local/bin/entrypoint.sh" ]
 
 CMD [  "yarn", "start" ]
