--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,7 @@
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.33.0",
     "vite": "^6.3.5",
+    "vite-plugin-pwa": "^1.0.3",
     "vite-plugin-svgr": "^4.3.0"
   }
 }
