--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,7 +35,8 @@
     "@types/lodash": "^4.17.17",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.5",
-    "@vitejs/plugin-react": "^4.5.0",
+    "@vitejs/plugin-react-swc": "^4.0.1",
+    "esbuild": "^0.25.9",
     "eslint": "^9.28.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
