--- a/nginx/nginx.dev.conf
+++ b/nginx/nginx.dev.conf
@@ -26,7 +26,7 @@ http {
 
     # Proxy API requests
     location /api {
-      proxy_pass http://backend:3000/api; # Ensure this is correct
+      proxy_pass http://backend-api:3000/api; # Ensure this is correct
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
