--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,21 +5,23 @@ WORKDIR /app
 
 # A wildcard is used to ensure both package.json AND package-lock.json are copied
 COPY package*.json yarn.lock ./
-COPY prisma ./prisma/
 
 # Install app dependencies
-RUN yarn install
+RUN yarn install --frozen-lockfile
+
+COPY prisma ./prisma/
 
 COPY . .
 
 RUN yarn build
-# RUN npx prisma generate
 
-COPY entrypoint.sh /usr/local/bin/entrypoint.sh
+RUN npx prisma generate
+
+# COPY entrypoint.sh /usr/local/bin/entrypoint.sh
 
 EXPOSE 3000
 
-RUN chmod +x /usr/local/bin/entrypoint.sh
+# RUN chmod +x /usr/local/bin/entrypoint.sh
 
 # ENTRYPOINT [ "/usr/local/bin/entrypoint.sh" ]
 
