Revert "new backend/Dockerfile"
This reverts commit 18ec1080b54a96ed547b2a4dff080049766759c1.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,23 +5,21 @@ WORKDIR /app
 
 # A wildcard is used to ensure both package.json AND package-lock.json are copied
 COPY package*.json yarn.lock ./
+COPY prisma ./prisma/
 
 # Install app dependencies
-RUN yarn install --frozen-lockfile
-
-COPY prisma ./prisma/
+RUN yarn install
 
 COPY . .
 
 RUN yarn build
+# RUN npx prisma generate
 
-RUN npx prisma generate
-
-# COPY entrypoint.sh /usr/local/bin/entrypoint.sh
+COPY entrypoint.sh /usr/local/bin/entrypoint.sh
 
 EXPOSE 3000
 
-# RUN chmod +x /usr/local/bin/entrypoint.sh
+RUN chmod +x /usr/local/bin/entrypoint.sh
 
 # ENTRYPOINT [ "/usr/local/bin/entrypoint.sh" ]
 
