--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -1,5 +1,5 @@
 # Stage 1: Setup the development environment with Vite
-FROM node:alpine3.21 AS dev
+FROM node:25-alpine AS dev
 
 # Set the working directory
 WORKDIR /app
