--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -118,8 +118,10 @@ services:
       - internal
       - default
     depends_on:
-      - frontend
-      - backend-api
+      frontend:
+          condition: service_started
+      backend-api:
+          condition: service_healthy
     restart: unless-stopped
 
   certbot:
